@@ -1,5 +1,8 @@
 2005-09-23  Fernando Perez  <Fernando.Perez@colorado.edu>
 
+	* IPython/demo.py (Demo.__init__): added support for individually
+	tagging blocks for automatic execution.
+
 	* IPython/Magic.py (magic_pycat): new %pycat magic for showing
 	syntax-highlighted python sources, requested by John.
 
